@startuml
!pragma layout smetana

class MonetaryCostStrategy {

}

class CarbonCostStrategy {

}

class WeightedCostStrategy {

}

interface CostStrategy {

getCost() : ShipmentCost
getCost(ShipmentOption) : ShipmentOption

}
CarbonCostStrategy -> WeightedCostStrategy
WeightedCostStrategy ->  MonetaryCostStrategy
CarbonCostStrategy ..|> CostStrategy
WeightedCostStrategy ..|> CostStrategy
MonetaryCostStrategy ..|> CostStrategy
@enduml